# hGeometryCoder

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  g-pcc-dyadic-codec.cabal  hGeometryCoder.cabal  package.yaml  stack.yaml  storm-point-cloud.cabal  test.ply  test2.ply
app/: CLI.hs  Main.hs
assets/: dustDense6.ply  simple.dec.ply  simple.edx  simple2.ply  test.ply  teste128.edx  teste32.ply
assets/golden/: dustDense5.edx  dustDense6.edx  simple.edx
benchmark/: Bench.hs  ParserBench.hs
resultados/80n/: teste32.ply  teste64.ply  teste64D.ply  teste64T.edx
results/80n/: teste128NOVO - Copia.txt  teste32 - Copia.txt  teste32D.ply
results/80nnn/: teste32D.ply  teste32ORD.ply  teste32T.edx  teste32T_byte.edx  teste64 - Copia.txt  teste64.ply  teste64D.ply  teste64T.edx  teste64T_byte.edx
scripts/: downsamplePLY.py
src/: Bitstream.hs  GPccDyadicCodec.hs
src/Codec/PointCloud/: Utils.hs
src/Codec/PointCloud/Compression/: Dyadic.hs  PLY.hs
src/Codec/PointCloud/Driver/: Bitstream.hs  PLY.hs
src/Codec/PointCloud/Driver/EDX/: Bitstream.hs  DecoderParser.hs  Types.hs
src/Codec/PointCloud/Driver/PLY/: Bitstream.hs  Output.hs  PLY.hs  Parser.hs  Types.hs  Utils.hs
src/Codec/PointCloud/Types/: Image.hs  PCBitStream.hs  Pixel.hs  PointCloud.hs  Tree.hs  Voxel.hs
src/Data/: PLY.hs  Utils.hs
src/Data/Input/: Parser.hs  Types.hs
src/Data/PLY/: Parser.hs  PointCloud.hs  Types.hs
src/Data/Structures/: Image.hs  PCBitStream.hs  Pixel.hs  PointCloud.hs
storm-point-cloud/: ChangeLog.md  README.md  ae.ply  bit2byte.py  package.yaml  ply_generator.py  storm-point-cloud.cabal  test.edx  test2.ply  teste32D - Copia.txt
storm-point-cloud/app/: Main.hs
storm-point-cloud/resultados/80n/: teste128NOVO.ply  teste32T.edx  teste64 - Copia.txt
storm-point-cloud/src/: Bitstream.hs  Dyadic.hs
storm-point-cloud/src/Data/: Utils.hs
storm-point-cloud/src/Data/Input/: DecoderParser.hs  PLY.hs  Parser.hs  Types.hs
storm-point-cloud/src/Data/Output/: Bitstream.hs  Types.hs
storm-point-cloud/src/Data/Structures/: Image.hs  PCBitStream.hs  Pixel.hs  PointCloud.hs  Tree.hs  Voxel.hs
test/: backAndForth_test.hs  encode_test.hs  parsePLY_test.hs  pc2PLY_test.hs  pc_test.hs
test_files/: simple.ply  teste128NOVO.edx  teste32Copia.txt
(+1 files in other folders)
