cabal-version:       2.4
name:                g-pcc-dyadic-codec
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/joseedil/g-pcc-dyadic-codec
bug-reports:         https://github.com/joseedil/g-pcc-dyadic-codec/issues
license:             MIT
license-file:        LICENSE
author:              José Edil Guimarães De Medeiros
maintainer:          José Edil Guimarães De Medeiros <j.edil@ene.unb.br>
copyright:           2020 José Edil Guimarães De Medeiros
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/joseedil/g-pcc-dyadic-codec.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , bytestring
                     , attoparsec
                     , vector
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:
                    -- -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:
                    -- -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     GPccDyadicCodec
                     , Data.PLY.Types
                     , Data.PLY.Parser
                     , Data.PLY.PointCloud
                     , Data.PLY
                     , Data.Utils
  other-modules:

executable g-pcc-dyadic-codec
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       g-pcc-dyadic-codec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
